--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="w-container">
       <div class="w-row">
         <div class="w-col w-col-6">
-          <h2 class="grey-heading arakawa1">「使っていないタイミング」にだけ「あなたの希望価格」で貸し出そう</h2><img class="w-hidden-main w-hidden-medium img-sp-2" src="images/dribbble_shot_1x.jpg" alt="54446fa15a892c4e47ed611f_dribbble_shot_1x.jpg">
+          <h2 class="grey-heading arakawa1">「使っていないタイミング」にだけ「あなたの希望価格」で貸し出そう。</h2><img class="w-hidden-main w-hidden-medium img-sp-2" src="images/dribbble_shot_1x.jpg" alt="54446fa15a892c4e47ed611f_dribbble_shot_1x.jpg">
           <p class="txt-intro">あなたが使っていない時期だけ借りたい人にアイテムを貸すことが可能。レンタル代として御礼も貰えます。
             <br>
             <br>高額なアイテム代金の元取り・次のアクティビティー資金集めも、Casuu が応援します。</p>
