--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="w-container">
       <a class="w-inline-block link-block" href="index.html"><img class="img-logo" src="images/logo.png" alt="casuu logo" width="200">
       </a>
-      <div class="txt-subscription">使わないアイテムを、簡単に貸し借りできるサイト！</div>
+      <div class="txt-subscription">使わないアイテムを、簡単に貸し借りできるサイト♪</div>
     </div>
   </div>
   <div class="section hero">
