最終版アップ
こにたんの力作を公開

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created in Webflow. http://www.webflow.com-->
-<!-- Last Published: Fri Oct 31 2014 08:55:34 GMT+0000 (UTC) -->
+<!-- Last Published: Tue Nov 11 2014 04:33:22 GMT+0000 (UTC) -->
 <html data-wf-site="544104deefdf4d1234b6b506" data-wf-page="544104deefdf4d1234b6b508">
 <head>
   <meta charset="utf-8">
@@ -35,47 +35,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <div class="w-container">
       <a class="w-inline-block link-block" href="index.html"><img class="img-logo" src="images/logo.png" alt="casuu logo" width="200">
       </a>
-      <div class="txt-subscription">使わないアイテムを、簡単に貸し借りできるサイト♪</div>
+      <div class="txt-subscription">今週末使わないアイテムを、簡単に貸し出せるサービス。</div>
     </div>
   </div>
-  <div class="section hero">
-    <div class="w-container container forcopy">
-      <h1 class="txt-catch">自宅で眠っているアイテムを活用！</h1>
-      <h1 class="txt-catch arakawa2">使用頻度は年に１～２回。その割に、結構なお値段がしたアイテム。<br>１週間だけ誰かに貸し出し、有効活用しませんか？</h1>
-    </div>
-  </div>
-  <div class="section yellow form notshow">
+  <div class="section main-img">
     <div class="w-container">
       <div class="w-row">
-        <div class="w-col w-col-6">
-          <h2 class="grey-heading">メールアドレス登録で、サービス改善にご協力いただけます。</h2>
+        <div class="w-col w-col-6 _0cal">
+          <h1 class="txt-head">自宅で眠っているアイテムを活用！</h1>
+          <h2 class="txt-head2">使用頻度は年に１・２回。<br>その割に、結構なお値段がしたアイテム。<br>「今週末」使いたい誰かに貸し出して、<br>有効活用しませんか？</h2>
         </div>
-        <div class="w-col w-col-6">
-          <div class="w-form sign-up-form">
-            <form class="w-clearfix" name="wf-form-signup-form" data-name="Signup Form" data-redirect="/success">
-              <input class="w-input field" type="email" placeholder="メールアドレスを入力してください。" name="email" data-name="Email" required="required">
-              <div class="w-checkbox w-clearfix txt-check">
-                <input class="w-checkbox-input checkbox" id="checkbox-4" type="checkbox" name="checkbox-4" data-name="Checkbox 4">
-                <label class="w-form-label" for="checkbox-4">サービスのインタビューに協力します！（謝礼あり）</label>
-              </div>
-              <input class="w-button button" type="submit" value="登録する" data-wait="お待ちください..." wait="お待ちください...">
-            </form>
-            <div class="w-form-done success-message">
-              <p>Thanks! You'll be the first to know.</p>
-              <p class="spread-word">Help spread the word!</p>
-              <div class="w-clearfix social-widget-wrapper">
-                <div class="w-widget w-widget-twitter social-widget">
-                  <iframe src="https://platform.twitter.com/widgets/tweet_button.html#url=http%3A%2F%2Fwebflow.com&amp;counturl=webflow.com&amp;text=Check%20out%20this%20site&amp;count=horizontal&amp;size=m&amp;dnt=true" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 110px; height: 20px;"></iframe>
-                </div>
-                <div class="w-widget w-widget-facebook social-widget">
-                  <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Ffacebook.com%2Fwebflow&amp;layout=button_count&amp;locale=en_US&amp;action=like&amp;show_faces=false&amp;share=false" scrolling="no" frameborder="0" allowtransparency="true" style="border: none; overflow: hidden; width: 90px; height: 20px;"></iframe>
-                </div>
-              </div>
-            </div>
-            <div class="w-form-fail error-message">
-              <p>Oops! Something went wrong while submitting the form. :(</p>
-            </div>
-          </div>
+        <div class="w-col w-col-6 w-clearfix _0cal"><img class="img-holidays" src="images/holidays3_mini.jpg" alt="54618a5f1743c1f4342d1f36_holidays3_mini.jpg">
         </div>
       </div>
     </div>
@@ -83,12 +53,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="section intro">
     <div class="w-container">
       <div class="w-row">
-        <div class="w-col w-col-6"><img class="w-hidden-small w-hidden-tiny img-1" src="images/20-Camping-Outdoor-Icons.png" width="280" alt="54446f0c9723ba1c53de7464_20-Camping-Outdoor-Icons.png">
+        <div class="w-col w-col-6"><img class="w-hidden-small w-hidden-tiny img-1" src="images/img1.png" alt="54618b07eda5e620048f5ee9_img1.png">
         </div>
         <div class="w-col w-col-6">
           <h2 class="grey-heading arakawa1">思いきって買った、そのアイテム。使いこなせていますか？</h2><img class="w-hidden-main w-hidden-medium img-sp-1" src="images/20-Camping-Outdoor-Icons.jpg" alt="544a0282840b334664ee70b8_20-Camping-Outdoor-Icons.jpg">
           <p class="txt-intro">例えば
-            <br>テント、釣り竿、BBQセット、電動ドリル…
+            <br>釣り竿、BBQセット、電動ドリル、ミシン…
             <br>
             <br>「あと数か月は使う予定もない」
             <br>「捨てるほどではないけれど…」
@@ -102,24 +72,24 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="section intro grey ver2">
     <div class="w-container">
       <div class="w-row">
-        <div class="w-col w-col-6">
-          <h2 class="grey-heading arakawa1">『使っていないタイミング』にだけ『あなたの希望価格』で貸し出そう。</h2><img class="w-hidden-main w-hidden-medium img-sp-2" src="images/dribbble_shot_1x.jpg" alt="54446fa15a892c4e47ed611f_dribbble_shot_1x.jpg">
-          <p class="txt-intro">あなたが使っていない時期だけ借りたい人にアイテムを貸すことが可能。レンタル代として御礼も貰えます。
+        <div class="w-col w-col-6 _0cal">
+          <h2 class="grey-heading arakawa1">「使っていないタイミング」にだけ<br>「あなたの希望価格」で貸し出そう。</h2><img class="w-hidden-main w-hidden-medium img-sp-2" src="images/dribbble_shot_1x.jpg" alt="54446fa15a892c4e47ed611f_dribbble_shot_1x.jpg">
+          <p class="txt-intro">あなたが使っていない時期だけ借りたい人にアイテムを貸し出すことができます。しかも、レンタル代として御礼も貰えます！
             <br>
             <br>高額なアイテム代金の元取り・次のアクティビティー資金集めも、Casuu が応援します。</p>
         </div>
-        <div class="w-col w-col-6"><img class="w-hidden-small w-hidden-tiny img-2" src="images/6p.png" alt="5453142b8e9fd24a12cc4bb5_6p.png">
+        <div class="w-col w-col-6"><img class="w-hidden-small w-hidden-tiny img-2" src="images/ipho.png" alt="546158230546d71b2ab4d495_ipho.png">
         </div>
       </div>
     </div>
   </div>
-  <div class="section intro">
+  <div class="section intro" data-ix="new-interaction">
     <div class="w-container">
       <div class="w-row">
-        <div class="w-col w-col-6"><img class="w-hidden-small w-hidden-tiny img-3" src="images/VectorVehicles.png" alt="544472071210964f474388dd_VectorVehicles.png">
+        <div class="w-col w-col-6 _0cal"><img class="w-hidden-small w-hidden-tiny img-3" src="images/11.png" alt="54615a8a3e0271fd306474b1_11.png">
         </div>
         <div class="w-col w-col-6">
-          <h2 class="grey-heading arakawa1">手軽な、受け渡しシステム。</h2><img class="w-hidden-main w-hidden-medium img-sp-3" src="images/VectorVehicles.png" alt="544472071210964f474388dd_VectorVehicles.png">
+          <h2 class="grey-heading arakawa1">手軽な、受け渡しシステム。</h2><img class="w-hidden-main w-hidden-medium img-sp-3" src="images/Vector Vehicles.png" alt="544472071210964f474388dd_Vector%20Vehicles.png">
           <p class="txt-intro">自宅の玄関先まで配送業者が出張、簡単に手続きができる！
             <br>
             <br>スノーボード等の大型グッズでも、安心して受け渡しができます。
@@ -150,7 +120,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="w-col w-col-6 _0cal">
           <h2 class="grey-heading">ハピタスpt プレゼント中！<br>簡単なアンケートへご協力をお願いします。</h2>
         </div>
-        <div class="w-col w-col-6"><a class="button" href="http://hapitas.jp/enqueteitem/index/id/126" target="_blank">アンケートに回答する</a>
+        <div class="w-col w-col-6">
+          <a class="w-inline-block" href="http://hapitas.jp/enqueteitem/index/id/126" target="_blank"><img class="img-pointbutton" src="images/p-button.png" alt="54618737437d711f04f12505_p-button.png">
+          </a>
         </div>
       </div>
     </div>
